fix(portal): improve Service History styling and alignment
- Updated CSS variables in portal-services.html:
  - var(--ss-neutral-50) → var(--ss-bg-light)
  - Added border to .anode-item for better visual separation
  - Consistent styling across all detail sections

- Updated CSS variables in service-history.js:
  - var(--ss-font-size-*) → var(--ss-text-*)
  - var(--ss-neutral-600) → var(--ss-text-medium)
  - var(--ss-success-700) → var(--ss-status-success-text)

- Improved anode and propeller item layout:
  - Better alignment with flexbox containers
  - Explicit font sizes and colors for consistency
  - Proper spacing between elements

Fixes styling and alignment issues in Service History timeline view.

--- a/portal-services.html
+++ b/portal-services.html
@@ -223,7 +223,7 @@
     }
 
     .timeline-item:hover {
-      background: var(--ss-neutral-50);
+      background: var(--ss-bg-light);
     }
 
     .timeline-header {
@@ -346,16 +346,18 @@
     }
 
     .anode-item {
-      background: var(--ss-neutral-50);
+      background: var(--ss-bg-light);
       padding: var(--ss-space-sm);
       margin-bottom: var(--ss-space-xs);
+      border: 1px solid var(--ss-border);
       display: flex;
       justify-content: space-between;
       align-items: center;
+      border-radius: var(--ss-radius-none);
     }
 
     .notes-section {
-      background: var(--ss-neutral-50);
+      background: var(--ss-bg-light);
       padding: var(--ss-space-md);
       border-left: 3px solid var(--ss-primary);
       font-size: var(--ss-text-sm);
