fix(portal): restore paint gradient section and fix service history layout
- Add missing paint condition HTML section to dashboard
- Fix detail-grid width (150px-200px max instead of expanding to fill)
- Remove redundant overall conditions from expanded section
- Show only detailed paint areas (keel, waterline, boot stripe) when expanded
- Reduces information duplication between badges and expanded view

--- a/portal.html
+++ b/portal.html
@@ -606,6 +606,27 @@
       </select>
     </div>
 
+    <!-- Paint Condition Section -->
+    <div class="paint-condition-section" id="paint-condition-section" style="display: none;">
+      <h3>🎨 Paint Condition</h3>
+      <div class="paint-condition-display">
+        <div class="gradient-bar">
+          <div class="condition-marker" id="condition-marker">⚓</div>
+        </div>
+        <div class="condition-labels">
+          <span>Not Inspected</span>
+          <span>Excellent</span>
+          <span>Good</span>
+          <span>Fair</span>
+          <span>Poor</span>
+        </div>
+        <div class="paint-status-message" id="paint-status-message">
+          Loading paint condition...
+        </div>
+        <div class="service-date-info" id="service-date-info"></div>
+      </div>
+    </div>
+
     <!-- Latest Service Section -->
     <div class="latest-service-section" id="latest-service-section" style="display: none;">
       <h3>🔧 Latest Service</h3>
