--- a/portal-services.html
+++ b/portal-services.html
@@ -308,7 +308,7 @@
 
     .detail-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(150px, 200px));
       gap: var(--ss-space-md);
     }
 
