feat(portal): update paint slider gradient colors to match billing

--- a/portal.html
+++ b/portal.html
@@ -253,21 +253,20 @@
       margin-top: var(--ss-space-md);
     }
 
-    /* Compact Gradient Bar (20px) */
     .gradient-bar {
       height: 20px;
       border-radius: 4px;
       position: relative;
       background: linear-gradient(to right,
-        #b0b0b0 0%,      /* Not Inspected */
-        #00b894 12.5%,   /* Excellent */
-        #4caf50 25%,     /* Excellent-Good */
-        #8bc34a 37.5%,   /* Good */
-        #ffc107 50%,     /* Good-Fair */
-        #ff9800 62.5%,   /* Fair */
-        #ff5722 75%,     /* Fair-Poor */
-        #d63031 87.5%,   /* Poor */
-        #8b0000 100%     /* Very Poor */
+        #7c8ea6 0%,      /* Not Inspected - blue-gray */
+        #00b894 12.5%,   /* Excellent - vibrant teal */
+        #4caf50 25%,     /* Excellent-Good - bright green */
+        #8bc34a 37.5%,   /* Good - lime green */
+        #ffc107 50%,     /* Good-Fair - golden yellow */
+        #ff9800 62.5%,   /* Fair - orange */
+        #ff5722 75%,     /* Fair-Poor - orange-red */
+        #d63031 87.5%,   /* Poor - red */
+        #8b0000 100%     /* Very Poor - dark red */
       );
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       margin-bottom: var(--ss-space-sm);
