feat(portal): refine paint slider container and label styling

--- a/portal.html
+++ b/portal.html
@@ -234,11 +234,11 @@
 
     /* Paint Condition Card */
     .paint-condition-section {
-      background: white;
-      padding: var(--ss-space-lg);
+      background: #f8f9fa;
+      padding: 24px;
       border-radius: var(--ss-radius-none);
       box-shadow: var(--ss-shadow-sm);
-      border: 1px solid var(--ss-border-subtle);
+      border: 1px solid #e5e7eb;
       margin-bottom: var(--ss-space-lg);
     }
 
@@ -297,9 +297,9 @@
     .condition-labels {
       display: flex;
       justify-content: space-between;
-      font-size: var(--ss-text-xs);
-      color: var(--ss-text-medium);
-      margin-top: var(--ss-space-xs);
+      font-size: 12px;
+      color: #6b7280;
+      margin-top: 8px;
       padding: 0 var(--ss-space-xs);
     }
 
