feat(portal): update condition badges with enterprise color palette

--- a/portal.html
+++ b/portal.html
@@ -539,36 +539,39 @@
     /* Condition Badges */
     .condition-badge {
       display: inline-block;
-      padding: 2px 8px;
-      border-radius: var(--ss-radius-none);
-      font-size: var(--ss-text-xs);
+      padding: 6px 12px;
+      border-radius: 4px;
+      font-size: 11px;
       font-weight: 600;
       text-transform: uppercase;
+      letter-spacing: 0.05em;
+      line-height: 1;
+      min-height: 26px;
     }
 
     .condition-excellent {
-      background: var(--ss-status-success-bg);
-      color: var(--ss-status-success-text);
+      background: #d1fae5;
+      color: #065f46;
     }
 
     .condition-good {
-      background: var(--ss-info-100);
-      color: var(--ss-info-700);
+      background: #dbeafe;
+      color: #1e40af;
     }
 
     .condition-fair {
-      background: var(--ss-status-warning-bg);
-      color: var(--ss-status-warning-text);
+      background: #fef3c7;
+      color: #92400e;
     }
 
     .condition-poor {
-      background: var(--ss-status-danger-bg);
-      color: var(--ss-status-danger-text);
+      background: #fee2e2;
+      color: #991b1b;
     }
 
     .condition-critical {
-      background: var(--ss-error-200);
-      color: var(--ss-error-900);
+      background: #fecaca;
+      color: #7f1d1d;
     }
   </style>
 </head>
