feat(portal): add card-based layout for vessel conditions

--- a/portal.html
+++ b/portal.html
@@ -573,6 +573,29 @@
       background: #fecaca;
       color: #7f1d1d;
     }
+
+    /* Condition Item Cards */
+    .condition-item-card {
+      background: white;
+      border: 1px solid #e5e7eb;
+      border-radius: 4px;
+      padding: 12px;
+      transition: all 0.2s ease;
+    }
+
+    .condition-item-card:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .condition-item-label {
+      font-size: 11px;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: #6b7280;
+      margin-bottom: 4px;
+    }
   </style>
 </head>
 <body>
