feat(portal): add responsive grid system for condition cards

--- a/portal.html
+++ b/portal.html
@@ -350,7 +350,11 @@
       }
 
       .paint-condition-section {
-        padding: var(--ss-space-md);
+        padding: 16px;
+      }
+
+      .latest-service-section {
+        padding: 16px;
       }
     }
 
@@ -595,6 +599,17 @@
       letter-spacing: 0.05em;
       color: #6b7280;
       margin-bottom: 4px;
+    }
+
+    /* Responsive Grid Adjustments */
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .paint-condition-section {
+        padding: 20px;
+      }
+
+      .latest-service-section {
+        padding: 20px;
+      }
     }
   </style>
 </head>
