--- a/portal.html
+++ b/portal.html
@@ -553,9 +553,19 @@
       min-height: 26px;
     }
 
+    .condition-not-inspected {
+      background: #e5e7eb;
+      color: #4b5563;
+    }
+
     .condition-excellent {
       background: #d1fae5;
       color: #065f46;
+    }
+
+    .condition-excellent-good {
+      background: #d1f4e0;
+      color: #166534;
     }
 
     .condition-good {
@@ -563,9 +573,19 @@
       color: #1e40af;
     }
 
-    .condition-fair {
+    .condition-good-fair {
       background: #fef3c7;
-      color: #92400e;
+      color: #854d0e;
+    }
+
+    .condition-fair {
+      background: #fed7aa;
+      color: #9a3412;
+    }
+
+    .condition-fair-poor {
+      background: #fecaca;
+      color: #991b1b;
     }
 
     .condition-poor {
@@ -573,6 +593,12 @@
       color: #991b1b;
     }
 
+    .condition-very-poor {
+      background: #fecaca;
+      color: #7f1d1d;
+    }
+
+    /* Legacy alias */
     .condition-critical {
       background: #fecaca;
       color: #7f1d1d;
