fix(portal): add all 9 condition labels to match gradient slider
- Display all intermediate conditions below slider
- Labels: Not Inspected, Excellent, Exc-Good, Good, Good-Fair, Fair, Fair-Poor, Poor, Very Poor
- Matches 9 color stops in gradient (0%, 12.5%, 25%, 37.5%, 50%, 62.5%, 75%, 87.5%, 100%)

--- a/portal.html
+++ b/portal.html
@@ -686,9 +686,13 @@
         <div class="condition-labels">
           <span>Not Inspected</span>
           <span>Excellent</span>
+          <span>Exc-Good</span>
           <span>Good</span>
+          <span>Good-Fair</span>
           <span>Fair</span>
+          <span>Fair-Poor</span>
           <span>Poor</span>
+          <span>Very Poor</span>
         </div>
         <div class="paint-status-message" id="paint-status-message">
           Loading paint condition...
