docs(portal): update features section to reflect active portal status
- Change from 'Soon you'll be able to' to 'Here's what you can do'
- All listed features are already implemented and live
- Add bold labels for each feature category
- More welcoming and action-oriented messaging

--- a/portal.html
+++ b/portal.html
@@ -737,17 +737,17 @@
 
     <!-- Info Section -->
     <div class="info-section">
-      <h3>Customer Portal Features</h3>
-      <p>Your customer portal is currently being set up. Soon you'll be able to:</p>
+      <h3>Your Portal Dashboard</h3>
+      <p>Welcome to your Sailor Skills customer portal. Here's what you can do:</p>
       <ul class="features-list">
-        <li>View detailed service history and condition reports</li>
-        <li>Access invoices and manage payment methods</li>
-        <li>Message the Sailor Skills team with questions</li>
-        <li>Request service or schedule appointments</li>
-        <li>Update your account and notification preferences</li>
-        <li>View photos and videos from your services</li>
+        <li><strong>Service History:</strong> View detailed service reports, vessel condition, and anode inspections</li>
+        <li><strong>Invoices:</strong> Access invoices and payment history</li>
+        <li><strong>Messages:</strong> Communicate directly with the Sailor Skills team</li>
+        <li><strong>Service Requests:</strong> Request service and track appointment status</li>
+        <li><strong>Account Settings:</strong> Update your contact information and preferences</li>
+        <li><strong>Service Media:</strong> View photos and videos from your boat services</li>
       </ul>
-      <p><strong>Stay tuned!</strong> We're working hard to bring you these features.</p>
+      <p>Use the navigation menu above to explore all features. Questions? Send us a message!</p>
     </div>
   </main>
 
