--- a/login.html
+++ b/login.html
@@ -2,276 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Sailor Skills Customer Portal</title>
-
-  <!-- Montserrat Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- Shared Styles -->
-  <link rel="stylesheet" href="/shared/src/ui/design-tokens.css">
-  <link rel="stylesheet" href="/shared/src/ui/styles.css">
-
-  <!-- Portal Styles -->
-  <link rel="stylesheet" href="/src/ui/portal-styles.css">
-
-  <!-- Page-Specific Styles -->
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: var(--ss-font-primary);
-      background: var(--ss-bg-light);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-
-    .login-container {
-      background: white;
-      padding: var(--ss-space-xl);
-      max-width: 400px;
-      width: 100%;
-      box-shadow: var(--ss-shadow-lg);
-      border-radius: var(--ss-radius-none);
-    }
-
-    .login-header {
-      text-align: center;
-      margin-bottom: var(--ss-space-xl);
-    }
-
-    .login-header h1 {
-      margin: 0 0 var(--ss-space-xs);
-      color: var(--ss-primary);
-      font-size: var(--ss-text-2xl);
-      font-weight: 700;
-    }
-
-    .login-header p {
-      margin: 0;
-      color: var(--ss-text-medium);
-      font-size: var(--ss-text-sm);
-    }
-
-    .auth-tabs {
-      display: flex;
-      gap: var(--ss-space-sm);
-      margin-bottom: var(--ss-space-lg);
-      border-bottom: 2px solid var(--ss-border-subtle);
-    }
-
-    .auth-tab {
-      flex: 1;
-      padding: var(--ss-space-sm);
-      background: none;
-      border: none;
-      border-bottom: 2px solid transparent;
-      margin-bottom: -2px;
-      cursor: pointer;
-      font-size: var(--ss-text-sm);
-      font-weight: 600;
-      color: var(--ss-text-medium);
-      transition: all 0.2s;
-    }
-
-    .auth-tab.active {
-      color: var(--ss-primary);
-      border-bottom-color: var(--ss-primary);
-    }
-
-    .auth-tab:hover:not(.active) {
-      color: var(--ss-primary-light);
-    }
-
-    .auth-panel {
-      display: none;
-    }
-
-    .auth-panel.active {
-      display: block;
-    }
-
-    .form-group {
-      margin-bottom: var(--ss-space-md);
-    }
-
-    .form-group label {
-      display: block;
-      margin-bottom: var(--ss-space-xs);
-      font-size: var(--ss-text-sm);
-      font-weight: 600;
-      color: var(--ss-text-dark);
-    }
-
-    .form-group input {
-      width: 100%;
-      padding: var(--ss-space-sm);
-      border: 1px solid var(--ss-border);
-      border-radius: var(--ss-radius-none);
-      font-size: var(--ss-text-sm);
-      font-family: var(--ss-font-primary);
-      background-color: white;
-      color: var(--ss-text-dark);
-    }
-
-    .form-group input:focus {
-      outline: none;
-      border-color: var(--ss-primary);
-    }
-
-    .btn {
-      width: 100%;
-      padding: var(--ss-space-sm) var(--ss-space-md);
-      border: none;
-      border-radius: var(--ss-radius-none);
-      font-size: var(--ss-text-sm);
-      font-weight: 600;
-      font-family: var(--ss-font-primary);
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-
-    .btn-primary {
-      background: var(--ss-primary);
-      color: white;
-    }
-
-    .btn-primary:hover {
-      background: var(--ss-primary-hover);
-    }
-
-    .btn-primary:disabled {
-      background: var(--ss-border);
-      cursor: not-allowed;
-    }
-
-    .forgot-password {
-      text-align: center;
-      margin-top: var(--ss-space-md);
-    }
-
-    .forgot-password a {
-      color: var(--ss-primary);
-      text-decoration: none;
-      font-size: var(--ss-text-sm);
-    }
-
-    .forgot-password a:hover {
-      text-decoration: underline;
-    }
-
-    .signup-link {
-      text-align: center;
-      margin-top: var(--ss-space-lg);
-      padding-top: var(--ss-space-lg);
-      border-top: 1px solid var(--ss-border-subtle);
-    }
-
-    .signup-link p {
-      margin: 0;
-      font-size: var(--ss-text-sm);
-      color: var(--ss-text-medium);
-    }
-
-    .signup-link a {
-      color: var(--ss-primary);
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .signup-link a:hover {
-      text-decoration: underline;
-    }
-
-    .alert {
-      padding: var(--ss-space-sm);
-      margin-bottom: var(--ss-space-md);
-      border-radius: var(--ss-radius-none);
-      font-size: var(--ss-text-sm);
-    }
-
-    .alert-success {
-      background: var(--ss-status-success-bg);
-      color: var(--ss-status-success-text);
-      border: 1px solid var(--ss-status-success-text);
-    }
-
-    .alert-error {
-      background: var(--ss-status-danger-bg);
-      color: var(--ss-status-danger-text);
-      border: 1px solid var(--ss-status-danger-text);
-    }
-
-    .magic-link-info {
-      background: var(--ss-status-info-bg);
-      color: var(--ss-status-info-text);
-      padding: var(--ss-space-sm);
-      margin-bottom: var(--ss-space-md);
-      border-radius: var(--ss-radius-none);
-      font-size: var(--ss-text-xs);
-      border: 1px solid var(--ss-status-info-text);
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=https://login.sailorskills.com/login.html">
+  <title>Redirecting to Login...</title>
 </head>
 <body>
-  <div class="login-container">
-    <div class="login-header">
-      <h1>⚓ Sailor Skills</h1>
-      <p>Customer Portal</p>
-    </div>
-
-    <div id="alert-container"></div>
-
-    <div class="auth-tabs">
-      <button class="auth-tab active" data-tab="password">Password</button>
-      <button class="auth-tab" data-tab="magic-link">Magic Link</button>
-    </div>
-
-    <!-- Password Login Panel -->
-    <div id="password-panel" class="auth-panel active">
-      <form id="password-login-form">
-        <div class="form-group">
-          <label for="password-email">Email</label>
-          <input type="email" id="password-email" name="email" required autocomplete="email">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required autocomplete="current-password">
-        </div>
-        <button type="submit" class="btn btn-primary" id="password-login-btn">
-          Sign In
-        </button>
-      </form>
-      <div class="forgot-password">
-        <a href="/reset-password.html">Forgot password?</a>
-      </div>
-    </div>
-
-    <!-- Magic Link Panel -->
-    <div id="magic-link-panel" class="auth-panel">
-      <div class="magic-link-info">
-        Enter your email and we'll send you a secure link to sign in. No password required!
-      </div>
-      <form id="magic-link-form">
-        <div class="form-group">
-          <label for="magic-link-email">Email</label>
-          <input type="email" id="magic-link-email" name="email" required autocomplete="email">
-        </div>
-        <button type="submit" class="btn btn-primary" id="magic-link-btn">
-          Send Magic Link
-        </button>
-      </form>
-    </div>
-
-    <div class="signup-link">
-      <p>Don't have an account? <a href="/signup.html">Sign up</a></p>
-    </div>
-  </div>
-
-  <script type="module" src="/src/auth/login.js"></script>
+  <p>Redirecting to login page...</p>
+  <script>
+    window.location.href = 'https://login.sailorskills.com/login.html?redirect=' + encodeURIComponent(window.location.origin + '/portal.html')
+  </script>
 </body>
 </html>
